# knopfler

./: .gitignore  Pipfile  knopfler.cfg  knopfler.json.example  knopfler.py  matrix_link.py  pyproject.toml  ruff.toml
knopfler/: knopfler.py
modules/: alertmanager.py
templates/: alertmanager.jinja
