[project]
name = "knopfler"
version = "0.2.2"
description = ""
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]
[project.optional-dependencies]
matrix = [
    "matrix-client>=0.4.0",
]
rocketchat = [
    "rocketchatapibot>=0.1.4",
]

[project.scripts]
knopfler = 'knopfler:main'

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.uv]
package = true
