[project]
name = "knopfler"
version = "0.2.3"
description = ""
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]
[project.optional-dependencies]
matrix = [
    "matrix-client>=0.4.0",
]
rocketchat = [
    "rocketchatapibot>=0.1.4",
]

[project.scripts]
knopfler = 'knopfler:main'

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.uv]
package = true
